<resources>
    <string name="app_name">System Calculator</string>
    <string name="answer">Answer :</string>
    <string name="enter_number_1">Enter Number 1</string>
    <string name="enter_number_2">Enter Number 2</string>
    <string name="add">+</string>
    <string name="sun">-</string>
    <string name="multi">x</string>
    <string name="div">÷</string>
    <string name="clear">C</string>
    <string name="exit">Exit</string>
    <string name="history">History</string>
    <string name="percent">%</string>
</resources>